@@ -58,12 +58,16 @@ Version 1.5.1:
    * Implemented a function which detects if a location is on the map border.
    * Implemented a function which gives the game's gold parameters.
    * Extended safe.py environment to expand AI's language capabilities; including:
-	collections, hotshot, Queue, sets, time, and the upcoming wail module.
+	collections, Queue, sets, time, and the upcoming wail module.
 	Use of chr, hash, lambda, ord, and super (new style classes) are now allowed
 	Control of safe_exec can now be toggled from the wesnoth binary.
    * Added new advanced option, "Only Run Safe Python AIs". When disabled, the safe_exec
 	environment is disabled for all running AIs. Use caution when disabling this option!
-   * Try/Except clauses are now allowed.
+   * Try/Except clauses are now allowed. A subset of builtin exceptions are available.
+	ArithmeticError, AssertionError, AttributeError, BaseException,
+	StopIteration, IndexError, KeyError, NameError, RuntimeError,
+	RuntimeWarning, ZeroDivisionError
+   * Exceptions can now be raised by user code.
  * terrains:
    * Fixed city village not being alias of the village terrain type; this was
      causing a duplicate "Village" terrain being displayed in the defense ratios
